<resources>
    <string name="app_name">Source Base</string>

    <string name="facebook_app_id" translatable="false">111111111111111111</string>
    <string name="facebook_client_token" translatable="false">bababababababaa7a7a7a7a7a7a7a7</string>

    <string name="txt_title_onb1">aaaaaaaaaaaaaa</string>
    <string name="txt_desc_onb1">aaaaaaaaaaaaaa</string>
    <string name="txt_title_onb2">aaaaaaaaaaaaaa</string>
    <string name="txt_title_onb3">aaaaaaaaaaaaaa</string>
    <string name="txt_desc_onb2">aaaaaaaaaaaaaae</string>
    <string name="txt_desc_onb3">aaaaaaaaaaaaaa</string>
    <string name="txt_cont_feature">aaaaaaaaaaaaaa</string>

    <string name="txt_english" translatable="false">English</string>
    <string name="txt_vietnamese" translatable="false">Vietnamese</string>
    <string name="txt_hindi" translatable="false">Hindi</string>
    <string name="txt_spanish" translatable="false">Spanish</string>
    <string name="txt_french" translatable="false">French</string>
    <string name="txt_portuguese" translatable="false">Portuguese</string>
    <string name="txt_choose_one">Choose one</string>
    <string name="this_action_contain_ads">This action contain ads</string>
    <string name="txt_select">Select</string>
    <string name="txt_next">Next</string>
    <string name="txt_get_start">Get Start</string>
    <string name="txt_permission">Permission</string>
    <string name="txt_are_you_sure">Are you sure?</string>
    <string name="txt_exit_app">You want to exit the application?</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_loading_cmp">Loading Consent Management Platform</string>
    <string name="txt_no_network_please_connect">No network, please connect!</string>
    <string name="txt_try_again">Try Again</string>
    <string name="txt_loading">Loading</string>
    <string name="txt_network_connected">Network connected</string>
    <string name="txt_this_action_contain_ads">This action contain ads</string>
    <string name="txt_network_error">Network error</string>
    <string name="txt_network_error_message">No network connection, please try again!</string>
    <string name="txt_ads_loading">Ads Loading...</string>
    <string name="txt_loading_ads">Loading ads...</string>
</resources>