<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size20"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="@dimen/size20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:paddingHorizontal="@dimen/size20"
            android:text="@string/txt_are_you_sure"
            android:textSize="@dimen/size22" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/size20"
            android:text="@string/txt_exit_app"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/size16">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/size36"
                android:layout_marginEnd="@dimen/size10"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:paddingHorizontal="@dimen/size20"
                android:stateListAnimator="@null"
                android:text="@string/txt_cancel"
                android:textAllCaps="false"
                android:textColor="@color/color_main"
                android:textSize="@dimen/size14"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnYes"
                android:layout_width="0dp"
                android:layout_height="@dimen/size36"
                android:layout_marginStart="@dimen/size10"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/size20"
                android:stateListAnimator="@null"
                android:text="@string/txt_yes"
                android:textAllCaps="false"
                android:textSize="@dimen/size14"
                tools:ignore="SpUsage" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>