<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/size36"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="@dimen/size16">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_network_error"
            android:textSize="@dimen/size16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_network_error_message"
            android:textColor="@color/gray"
            android:textSize="@dimen/size14" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anvSignal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size150"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/wifi_err" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/color_main"
                app:cardCornerRadius="@dimen/size24"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/size8"
                    android:text="@string/txt_cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size14" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnTryAgain"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/size16"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/color_main"
                app:cardCornerRadius="@dimen/size24"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/tvOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/size8"
                    android:text="@string/txt_try_again"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size14" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>